[package]
name = "final_project"
version = "0.1.0"
authors = ["sashaweiss <sasha@sashaweiss.coffee>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.5"
tui = "0.2"
termion = "1.5"
chan = "0.1"
chrono = "0.4"

[lib]
name = "syncterm"
path = "src/lib.rs"

[[bin]]
name = "git_helper_client"
path = "src/git_helper/client/main.rs"

[[bin]]
name = "git_helper_server"
path = "src/git_helper/server/main.rs"
